Refatoração pra não usar side menu do ionic

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<ion-app>
+<!-- <ion-app>
   <ion-router-outlet></ion-router-outlet>
-  <app-toolbar></app-toolbar>
-</ion-app>
+</ion-app> -->
+
+<app-sidenav></app-sidenav>
