--- a/src/global.scss
+++ b/src/global.scss
@@ -28,3 +28,22 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  position: relative;
+  font-family: 'Roboto', sans-serif;
+}
+
+$soft-mint: #9ed8b6;
+$lavender-mist: #c9a7e3;
+$peach-sorbet: #f5c6aa;
+$powder-blue: #add8e6;
+$buttercream: #f8e3a1;
